# blog_ml_bounce_classification

./: .gitignore  bounce_text_dataset.py  bouncy_castle_train.ipynb  encoding.py  evaluation.py  models.py  pyproject.toml  train.py
